# covid-hackathon

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  build.rs  nix-shell
backend/: Cargo.toml
backend/.cargo/: config
backend/enclave/: Cargo.toml
backend/enclave/src/: main.rs
backend/kdtree-rs/src/: kdtree.rs
backend/kdtree-rs/tests/: kdtree.rs
backend/rs-libc-decentriq/: Cargo.toml  build.rs
backend/rs-libc-decentriq/examples/playground/: Cargo.toml
backend/rs-libc-decentriq/examples/playground/libtest-sys/testlib/: test.c  test.h
backend/rs-libc-decentriq/examples/sqlite/src/: main.rs
backend/rs-libc-decentriq/src/: lib.rs  mutex.rs  other.rs
backend/spatialite-sys/: Cargo.toml  build.rs
backend/spatialite-sys/src/: lib.rs
chily/: .gitignore  Cargo.toml  README.md  default.nix
chily/js/: package-lock.json  package.json  unify.sh
chily/js/tests/: chily.test.js  chily.test.ts
chily/py/: build.sh  tox.ini
chily/py/tests/: test_static_secrets.py
chily/src/: js.rs  lib.rs  python.rs  utils.rs
chily/tests/: wasm.rs
client/: .gitignore  Makefile  index.js  metro.config.js  package.json  setup_macos.sh
client/extra_modules/crypto/: index.js
client/ios/: File.swift  MobileAppBridge.swift  String.swift  client-Bridging-Header.h
client/ios/client/: Info.plist
client/ios/client.xcodeproj/: project.pbxproj
client/ios/client.xcodeproj/xcshareddata/xcschemes/: client-tvOS.xcscheme  client.xcscheme
client/ios/clientTests/: clientTests.m
client/rust_native/: Cargo.toml  Makefile  rust_native.h
client/rust_native/src/: lib.rs  string.rs
client/src/: App.tsx  decs.d.ts
client/src/assets/lottie/: lf20_E0YFed.json  lf20_aPomb3.json
client/src/components/: RustNative.tsx  counter.tsx  counter2.tsx  location.tsx  slide.tsx  status.tsx
client/src/navigations/: home-navigator.tsx  index.tsx  onboarding-navigator.tsx
client/src/reducers/: index.ts
client/src/scenes/home/: index.tsx
client/src/scenes/onboarding/: completed.tsx  explaination.tsx  index.tsx  intro.tsx
client/src/services/api/: index.ts
client/src/store/: index.ts
client/src/store/counter/: counterReducer.ts
client/src/store/general/: actions.ts  reducers.ts  types.ts
client/src/store/traces/: actions.ts  reducers.ts  types.ts
client/src/styles/: colors.ts  index.ts
enclave/rs-libc/examples/playground/libtest-sys/: Cargo.toml  build.rs
enclave/rs-libc/examples/playground/libtest-sys/src/: lib.rs
enclave/rs-libc/examples/playground/src/: main.rs
enclave/rs-libc/examples/sqlite/: Cargo.toml
enclave/rs-libc/src/: file.rs  other.rs  thread.rs
nix/: NIXPKGS_PIN  cached-nix-shell.nix  rust-tools.nix  shell.nix
nix/modules/: intel.nix
spatialite-sys/: build.rs
src/: lib.rs  wrapper.h
