[package]
name = "spatialite-sys"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
repository = "https://gitlab.com/ndarilek/spatialite-sys"
description = "Low-level bindings to the SpatiaLite SQLite geospatial extension"
license = "MPL-1.1/GPL-2.0/LGPL-2.1"

[badges]
gitlab = {repository = "ndarilek/spatialite-sys"}

[build-dependencies]
bindgen = "0.32"
pkg-config = "0.3"
