[package]
name = "spatialite-sys"
edition = "2018"
links = "spatialite"
version = "0.2.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
repository = "https://gitlab.com/ndarilek/spatialite-sys"
description = "Low-level bindings to the SpatiaLite SQLite geospatial extension"
license = "MPL-1.1/GPL-2.0/LGPL-2.1"

[lib]
crate-type = ["staticlib"]

[badges]
gitlab = {repository = "ndarilek/spatialite-sys"}

[build-dependencies]
autotools = { git = "https://github.com/ndarilek/autotools-rs" }
bindgen = "0.47"
pkg-config = "0.3"
