[package]
name = "enclave"
version = "0.1.0"
authors = ["Enrico Ghirardi <enrico.ghirardi@decentriq.ch>"]
edition = "2018"

[dependencies]
time = "0.1.42"
hyper = "0.10.16"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
env_logger = { version = "0.7.1", default-features = false, features = ["humantime", "regex"] }
log = "0.4.8"
chrono = { version = "0.4.11", features = ["serde"] }
sgx-isa = { version = "0.3.1", features = ["sgxstd"] }
