[package]
name = "spatialite-sys"
edition = "2018"
links = "spatialite"
version = "0.3.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
repository = "https://gitlab.com/ndarilek/spatialite-sys"
description = "Low-level bindings to the SpatiaLite SQLite geospatial extension"
license = "MPL-1.1/GPL-2.0/LGPL-2.1"

[badges]
gitlab = {repository = "ndarilek/spatialite-sys"}

[dependencies]
rusqlite = "0.21.0"
libsqlite3-sys = "0.17.0"
rs-libc-decentriq = { path = "../rs-libc-decentriq" }
rs-libc = "0.2.0"

[build-dependencies]
autotools = "0.2"
bindgen = "0.50"
pkg-config = "0.3"
