[package]
name = "rust_native"
version = "0.1.0"
authors = ["Stefan Deml <stefandeml@gmail.com>"]
edition = "2018"

[lib]
name = "rust_native"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
jni = { version = "0.5.1", optional = true, default-features = false }

[features]
default = ["jni"]